--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@ Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota pr
 </p> 
  
 <ul>
-	<li>Sejarah</li>
-	<li>Geografis</li>
-	<li>Wisata</li>
+	<li>
+		<a href="#sejarah">Sejarah</a>
+	</li>
+	<li>
+		<a href="#geografis">Geografis</a>
+	</li>
+	<li>
+		<a href="#wisata">Wisata</a>
+	</li>
 </ul>
 
-<h2>Sejarah</h2>
+<h2 id="sejarah">Sejarah</h2>
 <img src="assets/image/history.jpg" alt="Sejarah" />
 <p>
 Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk telaga. Legenda yang diceritakan oleh orang-orang tua di Bandung mengatakan bahwa nama Bandung diambil dari sebuah kendaraan air yang terdiri dari dua perahu yang diikat berdampingan yang disebut perahu bandung yang digunakan oleh Bupati Bandung, R.A. Wiranatakusumah II, untuk melayari Ci Tarum dalam mencari tempat kedudukan kabupaten yang baru untuk menggantikan ibu kota yang lama di Dayeuhkolot.
@@ -26,7 +32,7 @@ Berdasarkan filosofi Sunda, kata Bandung juga berasal dari kalimat Nga-Bandung-a
 </p>
  
  
-<h2>Geografis</h2>
+<h2 id="geografis">Geografis</h2>
 <img src="assets/image/geografis.jpg" alt="Geografis" />
 <p>
 Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini terletak di tengah-tengah provinsi Jawa Barat, serta berada pada ketinggian ±768 m di atas permukaan laut, dengan titik tertinggi di berada di sebelah utara dengan ketinggian 1.050 meter di atas permukaan laut dan sebelah selatan merupakan kawasan rendah dengan ketinggian 675 meter di atas permukaan laut.
@@ -36,7 +42,7 @@ Kota Bandung dialiri dua sungai utama, yaitu Sungai Cikapundung dan Sungai Citar
 </p>
  
  
-<h2>Wisata</h2>
+<h2 id="wisata">Wisata</h2>
 <p>
 Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam menikmati liburan akhir pekan terutama dari masyarakat yang berasal dari Jakarta sekitarnya. Selain menjadi kota wisata belanja, kota Bandung juga dikenal dengan sejumlah besar bangunan lama berarsitektur peninggalan Belanda.
 </p> 
